--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,15 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="130dp"
-        android:layout_height="35dp"
+        android:layout_width="295dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="36dp"
+        android:fontFamily="sans-serif-medium"
         android:text="Multiple Choice Test"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#020742"
-        android:textSize="14sp"
+        android:textColor="#0A1471"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.451"
@@ -27,19 +28,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="58dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="16dp"
         android:text="Φοιτήτρια:"
         android:textColor="#000000"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="16dp"
         android:text="Πέτσα Αθανασία"
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
@@ -47,10 +53,13 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="135dp"
         android:text="Αρ. Μητρώου:"
         android:textColor="#1A1818"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView5"
@@ -59,6 +68,7 @@
         android:layout_marginStart="13dp"
         android:text="24063"
         android:textColor="#050505"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4" />
 
@@ -73,15 +83,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="155dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="249dp"
+        android:layout_width="170dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="176dp"
         android:backgroundTint="#07043E"
         android:text="εναρξη"
         android:textColor="#FAF8F8"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView8"
@@ -91,7 +102,7 @@
         android:layout_marginEnd="37dp"
         android:layout_marginBottom="31dp"
         android:text="Πανεπιστήμιο Δυτικής Αττικής"
-        android:textColor="#05125D"
+        android:textColor="#0D229B"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -106,7 +117,7 @@
         android:layout_marginEnd="37dp"
         android:layout_marginBottom="70dp"
         android:text="Π.Μ.Σ Πληροφορική και Εφαρμογές"
-        android:textColor="#05125D"
+        android:textColor="#0D229B"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
