--- a/app/src/main/res/layout/activity_candidate.xml
+++ b/app/src/main/res/layout/activity_candidate.xml
@@ -57,6 +57,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextName"
             android:layout_width="331dp"
             android:layout_height="40dp"
             android:hint="Όνομα" />
@@ -74,6 +75,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextSurname"
             android:layout_width="350dp"
             android:layout_height="44dp"
             android:hint="Επώνυμο" />
