--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,18 +5,45 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".QuizActivity">
 
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="352dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="201dp"
-        android:layout_marginEnd="11dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="55dp"
         android:text="Ερώτηση"
         android:textAlignment="center"
         android:textColor="#261F1F"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroupOptions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radioGroupOptions"
+        android:layout_width="78dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="221dp"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="128dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="137dp"
+        android:backgroundTint="#07043E"
+        android:text="Επόμενη"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupOptions" />
 </androidx.constraintlayout.widget.ConstraintLayout>
