--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -28,13 +28,13 @@
         android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="221dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonNext"
         android:layout_width="128dp"
         android:layout_height="46dp"
         android:layout_marginBottom="137dp"
