--- a/app/src/main/res/layout/activity_candidate.xml
+++ b/app/src/main/res/layout/activity_candidate.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/imageQuestion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CandidateActivity">
@@ -83,8 +83,8 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="137dp"
-        android:layout_height="0dp"
+        android:layout_width="133dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="78dp"
         android:backgroundTint="#07043E"
         android:text="Έναρξη Τεστ"
