--- a/app/src/main/res/layout/activity_candidate.xml
+++ b/app/src/main/res/layout/activity_candidate.xml
@@ -13,7 +13,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="200dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Στοιχεία Εξεταζόμενου"
+        android:text="✏️ Στοιχεία Εξεταζόμενου"
         android:textAlignment="center"
         android:textColor="#0B0B0B"
         android:textSize="20sp"
