--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -10,15 +10,16 @@
 
     <ImageView
         android:id="@+id/imageQuestion"
-        android:layout_width="306dp"
-        android:layout_height="199dp"
+        android:layout_width="326dp"
+        android:layout_height="180dp"
         android:layout_marginStart="73dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="73dp"
         android:layout_marginBottom="138dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/radioGroupOptions"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/everest" />
@@ -55,7 +56,7 @@
 
     <Button
         android:id="@+id/buttonNext"
-        android:layout_width="128dp"
+        android:layout_width="146dp"
         android:layout_height="46dp"
         android:layout_marginBottom="137dp"
         android:backgroundTint="#07043E"
@@ -66,7 +67,21 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroupOptions"
-        app:layout_constraintVertical_bias="0.912" />
+        app:layout_constraintVertical_bias="0.665" />
+
+    <TextView
+        android:id="@+id/textViewTimer"
+        android:layout_width="75dp"
+        android:layout_height="25dp"
+        android:text="Χρόνος: 0"
+        android:textAlignment="center"
+        android:textColor="#D30C0C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNext"
+        app:layout_constraintVertical_bias="0.345" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
