--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,16 +9,16 @@
 
     <TextView
         android:id="@+id/textTitle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="301dp"
+        android:layout_height="46dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="201dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="16dp"
-        android:text="🎉 Τέλος Τεστ 🎉"
+        android:text=" Τέλος Τεστ 🎉 "
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textName"
         app:layout_constraintEnd_toEndOf="@+id/textName"
         app:layout_constraintStart_toStartOf="@+id/textName"
@@ -47,7 +47,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="48dp"
         android:layout_marginBottom="15dp"
-        android:text="✅ Σκορ:"
+        android:text="✔ Σκορ:"
         android:textAllCaps="false"
         android:textColor="#000000"
         android:textSize="14sp"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="62dp"
-        android:text="✅ Ώρα:"
+        android:text="✔ Ώρα:"
         android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/textMessage"
@@ -92,8 +92,10 @@
         android:text="👏 Καλή προσπάθεια! "
         android:textAlignment="center"
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonRetry"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTime" />
 </androidx.constraintlayout.widget.ConstraintLayout>
